# am65x

./: CMakeLists.txt  README.md  am65x.c  am65x.h  build.sh  i2c-omap.txt  i2c.txt  i2cfunc.c  i2cfunc.h
.github/workflows/: cmake.yml  cmake_onlabel.yml  promote.yml
PCA9685servo/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  Makefile  PCA9685.c  PCA9685.h  main.c  option.inc
PCA9685servo/src/: DEV_Config.c  DEV_Config.h  PCA9685.c  PCA9685.h  main.cpp  servo.cpp  servo.h
TSL2581/: .gitignore  CMakeLists.txt  DEV_Config.c  DEV_Config.h  Makefile  TSL2581.c  TSL2581.h  main.c
TSL2581/src/: DEV_Config.c  DEV_Config.h  TSL2581.c
_toolchains/: lin_4_lin.cmake  lin_4_lin_arm.cmake
dependency/: libi2c-dev_4.1-1_arm64.deb
dependency/armv6l/: servo.cpp
